--- a/mobile-app/index.html
+++ b/mobile-app/index.html
@@ -6,6 +6,8 @@
 
     <base href="/" />
 
+<!--    <meta name="theme-color" media="(prefers-color-scheme: light)" content="#0054e9" />-->
+
     <meta name="color-scheme" content="light dark" />
     <meta
       name="viewport"
